--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "webpack": "^5.92.1",
     "webpack-cli": "^4.10.0",
     "webpack-merge": "^5.10.0"
+  },
+  "dependencies": {
+    "ws": "^8.18.0"
   }
 }
