--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,7 +16,7 @@
     "default_title": "Ai Assist-dm",
     "default_popup": "popup.html"
   },
-  "permissions": ["activeTab", "tabs", "scripting", "webRequest"],
+  "permissions": ["activeTab", "tabs", "scripting", "webRequest", "https://chatgpt.com/", "https://chatgpt.com/*"],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
